--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.0.2</version>
+        <configuration>   
+            <source>8</source>   
+            <target>8</target>   
+        </configuration> 
         <configuration>
           <archive>
             <manifest>
